syntax = "proto3";

import "shared.proto";

package pictureStorage;

service PictureStorageService {
  rpc CreatePictureById (stream PictureCreationById) returns (Empty) {}
  rpc GetPictureById (IdWithMimetype) returns (stream PictureData) {}
  rpc RemovePictureById (IdWithMimetype) returns (Empty) {}
}
